@@ -1101,18 +1101,6 @@ STATEMENT_UPDATE_WIKI_USER = \
     editor = ?, \
     signature = ? \
     where wiki_user_id = ?
-UPGRADE_090_ADD_TOPIC_NAMESPACE_ID = \
-    alter table jam_topic add column namespace_id INTEGER DEFAULT 0 NOT NULL
-UPGRADE_090_ADD_TOPIC_PAGE_NAME = \
-    alter table jam_topic add column page_name VARCHAR(200)
-UPGRADE_090_ADD_TOPIC_PAGE_NAME_LOWER = \
-    alter table jam_topic add column page_name_lower VARCHAR(200)
-UPGRADE_090_ADD_TOPIC_PAGE_NAME_LOWER_NOT_NULL_CONSTRAINT = \
-    alter table jam_topic alter column page_name_lower VARCHAR(200) NOT NULL
-UPGRADE_090_ADD_TOPIC_PAGE_NAME_NOT_NULL_CONSTRAINT = \
-    alter table jam_topic alter column page_name VARCHAR(200) NOT NULL
-UPGRADE_090_ADD_TOPIC_NAMESPACE_ID_CONSTRAINT = \
-    alter table jam_topic add constraint jam_f_topic_namesp FOREIGN KEY (namespace_id) REFERENCES jam_namespace(namespace_id) 
 UPGRADE_100_ADD_VIRTUAL_WIKI_LOGO_URL = \
     alter table jam_virtual_wiki add column logo_image_url VARCHAR(200)
 UPGRADE_100_ADD_VIRTUAL_WIKI_SITE_NAME = \
