@@ -300,21 +300,6 @@ STATEMENT_SELECT_WIKI_USERS = \
       where rownum <= ? \
     ) \
     where rowcount > ? 
-# oracle doesn't want "add column"
-UPGRADE_090_ADD_TOPIC_NAMESPACE_ID = \
-    alter table jam_topic add namespace_id INTEGER DEFAULT 0 NOT NULL
-# oracle doesn't want "add column"
-UPGRADE_090_ADD_TOPIC_PAGE_NAME = \
-    alter table jam_topic add page_name VARCHAR(200)
-# oracle doesn't want "add column"
-UPGRADE_090_ADD_TOPIC_PAGE_NAME_LOWER = \
-    alter table jam_topic add page_name_lower VARCHAR(200)
-# oracle uses "modify" instead of "alter column"
-UPGRADE_090_ADD_TOPIC_PAGE_NAME_LOWER_NOT_NULL_CONSTRAINT = \
-    alter table jam_topic modify page_name_lower NOT NULL
-# oracle uses "modify" instead of "alter column"
-UPGRADE_090_ADD_TOPIC_PAGE_NAME_NOT_NULL_CONSTRAINT = \
-    alter table jam_topic modify page_name NOT NULL
 UPGRADE_100_ADD_VIRTUAL_WIKI_LOGO_URL = \
     alter table jam_virtual_wiki add logo_image_url VARCHAR(200)
 UPGRADE_100_ADD_VIRTUAL_WIKI_SITE_NAME = \
