@@ -123,11 +123,5 @@ STATEMENT_CREATE_WIKI_USER_TABLE = \
       CONSTRAINT jam_f_wuser_users FOREIGN KEY (login) REFERENCES jam_users(username) \
     )
 # "set not null" seems to be postgres-specific
-UPGRADE_090_ADD_TOPIC_PAGE_NAME_LOWER_NOT_NULL_CONSTRAINT = \
-    alter table jam_topic alter column page_name_lower set NOT NULL
-# "set not null" seems to be postgres-specific
-UPGRADE_090_ADD_TOPIC_PAGE_NAME_NOT_NULL_CONSTRAINT = \
-    alter table jam_topic alter column page_name set NOT NULL
-# "set not null" seems to be postgres-specific
 UPGRADE_100_DROP_VIRTUAL_WIKI_DEFAULT_TOPIC_NOT_NULL = \
     alter table jam_virtual_wiki alter column default_topic_name drop NOT NULL
